--- a/cnit-about.css
+++ b/cnit-about.css
@@ -127,3 +127,51 @@ body {
 #footer a {
   text-decoration: none;
 }
+
+
+/* Media Queries */
+
+@media screen and (max-width: 499px) {
+
+  /* Mobile */
+
+  /* Logo + Home */
+  .logo > a {
+    padding-left: 100px;
+  }
+
+  /* Navigation */
+  .nav > li {
+    display: inline-block;
+    float: left;
+    background-color: #ffffff;
+    color: #ffffff;
+    padding: 25px 5px 20px 175px;
+  }
+
+  /* Banner */
+  .banner > .banner-img {
+    width: 100%;
+    display: flex;
+    padding-bottom: 10px;
+  }
+
+  /* Image */
+  .left {
+    width: 85%;
+    height: 60%;
+    padding-left: 80px;
+  }
+
+  .right {
+    padding-left: 120px;
+  }
+
+  /* Footer */
+  #footer {
+    text-align: center;
+    vertical-align: bottom;
+    padding-top: 400px;
+  }
+
+}
