Edit - HTML/CSS validation + thumb.

--- a/olympus-large.css
+++ b/olympus-large.css
@@ -39,6 +39,13 @@
 }
 
 
+/* HTML Validator Styles */
+.validate {
+  text-align: center;
+  padding-top: 10px;
+}
+
+
 /* Footer */
 footer {
   color: #c98932;
