--- a/olympus-large.css
+++ b/olympus-large.css
@@ -5,6 +5,7 @@
 
 /* Main Container */
 .main-container {
+  /* Gamma correction has been applied to 'blackdust.png' using Gimp */
   background: url("blackdust.png") no-repeat fixed center;
   width: auto;
   height: auto;
@@ -35,7 +36,7 @@
   height: auto;
   width: auto;
   justify-content: center;
-  margin-left: 15%;
+  margin-left: 6%;
 }
 
 
