Edit - changed background-color for Homework 6.

--- a/ramanujan.css
+++ b/ramanujan.css
@@ -1,7 +1,7 @@
 
 /* Universal Styles */
 body {
-  background-color: #fef65b;
+  background-color: #eeeeee;
   font-family: 'Lato', sans-serif;
 }
 
