--- a/ramanujan.css
+++ b/ramanujan.css
@@ -12,26 +12,27 @@ body {
   font-style: italic;
   text-align: center;
   text-shadow: 2px 2px;
-  padding-top: 35px;
 }
 
 
 /* Image Container */
 .img-container {
-  padding-top: 10px;
-  padding-left: 25%;
-  z-index: -20;
-  position: relative;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  padding-left: 37%;
+  position: absolute;
 }
 
 /* Image I */
 .img1 {
   display: inline-block;
+  z-index: -20;
 }
 
 /* Image I */
 .img2 {
   display: inline-block;
+  z-index: -40;
 }
 
 
@@ -47,8 +48,8 @@ body {
 /* Start Content */
 .content {
   width: 90%;
-  float: center;
-  padding-top: 15px;
+  float: initial;
+  padding-top: 19%;
   padding-left: 25px;
   text-align: center;
 }
@@ -56,7 +57,7 @@ body {
 
 /* Table Container */
 .tab-container {
-  padding-top: 50px;
+  padding-top: 15px;
   padding-left: 25%;
 }
 
@@ -77,14 +78,13 @@ body {
   border-collapse: collapse;
   text-align: center;
   width: 30%;
-  float: center;
+  float: initial;
   margin: 10px;
   padding: 10px;
 }
 
 /* Table - remove underline */
 td > a {
-  color:
   text-decoration: none;
 }
 
@@ -111,7 +111,7 @@ td > a:hover {
 /* HTML Validator Styles */
 .validate {
   text-align: center;
-  padding: 7%;
+  padding: 3%;
 }
 
 
@@ -120,6 +120,6 @@ footer {
   background-color: #31698a;
   border-radius: 10px; /* Border-radius has been applied to footer */
   text-align: center;
-  padding-top: 10px;
+  padding-top: 5px;
   padding-bottom: 10px;
 }
